fix: update select input styles for better visibility and consistency

--- a/src/components/AddTransactionForm/AddTransactionForm.module.css
+++ b/src/components/AddTransactionForm/AddTransactionForm.module.css
@@ -106,15 +106,13 @@
 
 .FormRow .FormInput.selectInput option {
   color: #FFFFFF;
-  background: linear-gradient(rgba(83, 61, 186, 0.7) 0%, rgba(80, 48, 154, 0.7) 43.14%, rgba(106, 70, 165, 0.525) 73.27%, rgba(133, 93, 175, 0.133) 120.03%);
-
+  background-color: #50309A;
+  /* background: #50309A; */
 }
 
-
-
-.FormRow .FormInput.selectInput>option:hover {
+.FormRow .FormInput.selectInput option::backdrop {
   background-color: #FBFBFB;
-  color: #4D3594;
+  color: #FF868D;
 }
 
 .FormRow .FormButton {
